--- a/study-2020-covid-lockdown-tcr2-igac.ipynb
+++ b/study-2020-covid-lockdown-tcr2-igac.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "For continued, seamless operation, a **.netrc** file containing an individual user's **NASA Earthdata Login** credentials (not supplied with this notebook) **should** be provided by each user intending to operate this notebook from their own AWS cloud environment; in the event a .netrc file is not provided in advance, this notebook features an interactive prompt for users to manually enter their own credentials (note: the user-entered credentials are one-time use to operate this notebook and are not stored in memory). \n",
     "\n",
-    "Below are the steps to creating a **.netrc** file and approving API-based access to the **NASA GES DISC Archvie**. Please note, **Step 2** below is **required** in advance for **all users** to successfully execute this notebook. \n",
+    "Below are the steps to creating a **.netrc** file and approving API-based access to the **NASA GES DISC Archive**. Please note, **Step 2** below is **required** in advance for **all users** to successfully execute this notebook. \n",
     "\n",
     "  1. Create an **Earthdata Login Account** ([clear here for details](https://urs.earthdata.nasa.gov/users/new))\n",
     "  2. Approve access to the **NASA GES DISC Archive** in your Earthdata Login Profile ([click here for details](https://disc.gsfc.nasa.gov/earthdata-login))\n",
@@ -24,7 +24,7 @@
     "**Other important notes:**\n",
     "\n",
     "  1. This code was designed and tested **\"as-is\"** to run directly within either an **AWS cloud-based Jupyter Hub** environment or a local **JupyterLab** environment.\n",
-    "  2. All dependencies within this notebook are also available in the latest [**environment.yml**](https://github.com/NASA-TROPESS/tutorials_notebooks/blob/main/environment.yml) file, which may be **optionally** used alongside this notebook to create, maintain and activate a dedicated conda environment (**tropess-env**) and Python notebook kernel. \n",
+    "  2. All dependencies within this notebook are also available in the latest [**environment.yml**](https://github.com/NASA-TROPESS/IGAC-ShortCourse/blob/main/environment.yml) file, which may be **optionally** used alongside this notebook to create, maintain and activate a dedicated conda environment (**tropess-env**) and Python notebook kernel. \n",
     "  3. Please \"trust\" this notebook before executing; this will prevent errors when writing output to your local directory."
    ]
   },
