--- a/study-2020-covid-lockdown-tcr2-igac.ipynb
+++ b/study-2020-covid-lockdown-tcr2-igac.ipynb
@@ -24,7 +24,7 @@
     "**Other important notes:**\n",
     "\n",
     "  1. This code was designed and tested **\"as-is\"** to run directly within either an **AWS cloud-based Jupyter Hub** environment or a local **JupyterLab** environment.\n",
-    "  2. All dependencies within this notebook are also available in the latest [**environment.yml**](https://github.com/NASA-TROPESS/IGAC-ShortCourse/blob/main/environment.yml) file, which may be **optionally** used alongside this notebook to create, maintain and activate a dedicated conda environment (**tropess-env**) and Python notebook kernel. \n",
+    "  2. All dependencies within this notebook are also available in the latest [**environment.yml**](https://github.com/NASA-TROPESS/IGAC-ShortCourse/blob/main/environment.yml) file, which may be **optionally** used alongside this notebook to create, maintain and activate a dedicated conda environment (**tropess-igac-env**) and Python notebook kernel. \n",
     "  3. Please \"trust\" this notebook before executing; this will prevent errors when writing output to your local directory."
    ]
   },
